--- a/src/main/resources/view/FXMLAnchorPaneLeituraArquivo.fxml
+++ b/src/main/resources/view/FXMLAnchorPaneLeituraArquivo.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane fx:id="root" maxHeight="-Infinity"
 	maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-	prefHeight="480.0" prefWidth="800.0"
+	prefHeight="580.0" prefWidth="800.0"
 	xmlns="http://javafx.com/javafx/8.0.171"
 	xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="mb.dabm.controller.FXMLAnchorPaneLeituraArquivoController">
@@ -49,14 +50,8 @@
 			prefWidth="620.0" />
 		<JFXProgressBar fx:id="progress" layoutX="165.0"
 			layoutY="79.0" prefHeight="15.0" prefWidth="620.0" />
-		<Separator layoutX="12.0" layoutY="172.0" prefHeight="3.0"
+		<Separator layoutX="12.0" layoutY="174.0" prefHeight="3.0"
 			prefWidth="786.0" />
-		<Text layoutX="373.0" layoutY="164.0" strokeType="OUTSIDE"
-			strokeWidth="0.0" text="Resumo">
-			<font>
-				<Font size="18.0" />
-			</font>
-		</Text>
 		<Label fx:id="lblStatus" layoutX="165.0" layoutY="59.0"
 			prefHeight="15.0" prefWidth="620.0" text="Contador:">
 			<padding>
@@ -78,25 +73,55 @@
 					size="20.0" />
 			</graphic>
 		</JFXButton>
-		<AnchorPane fx:id="anchorPaneResumo" layoutX="9.0"
-			layoutY="181.0" prefHeight="97.0" prefWidth="786.0">
+		<AnchorPane fx:id="anchorPaneResumo" layoutX="166.0"
+			layoutY="108.0" prefHeight="50.0" prefWidth="620.0">
 			<children>
-				<Label fx:id="lblTotalLinhas" layoutX="9.0" layoutY="11.0"
+				<Label fx:id="lblTotalLinhas" layoutX="6.0" layoutY="11.0"
 					text="Linhas existentes:">
 					<font>
 						<Font name="System Bold" size="12.0" />
 					</font>
 				</Label>
 				<JFXTextField fx:id="txtTotalLinhas" editable="false"
-					layoutX="160.0" layoutY="2.0" prefHeight="25.0" prefWidth="620.0" />
-				<Label fx:id="lblTempoProc" layoutX="10.0" layoutY="51.0"
+					layoutX="115.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
+				<Label fx:id="lblTempoProc" layoutX="291.0" layoutY="11.0"
 					text="Tempo processamento:">
 					<font>
 						<Font name="System Bold" size="12.0" />
 					</font>
 				</Label>
 				<JFXTextField fx:id="txtTempoProc" editable="false"
-					layoutX="161.0" layoutY="41.0" prefHeight="25.0" prefWidth="620.0" />
+					layoutX="433.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
+			</children>
+		</AnchorPane>
+		<AnchorPane fx:id="anchorPaneSplitFile" layoutX="8.0"
+			layoutY="185.0" prefHeight="385.0" prefWidth="786.0">
+			<children>
+				<JFXListView fx:id="listaViewFilesSplit" layoutY="45.0"
+					onMouseClicked="#handleClickFile"
+					prefHeight="339.0" prefWidth="786.0" />
+				<Label fx:id="lblLinhasPorArquivo" layoutX="3.0"
+					layoutY="18.0" text="Total de Linhas por arquivo:"
+					textFill="#030ed7">
+					<font>
+						<Font name="System Bold" size="12.0" />
+					</font>
+				</Label>
+				<JFXTextField fx:id="txtLinhasPorArquivo"
+					layoutX="175.0" layoutY="9.0" prefHeight="25.0" prefWidth="106.0"
+					text="5000">
+					<font>
+						<Font name="System Bold" size="12.0" />
+					</font>
+				</JFXTextField>
+				<JFXButton fx:id="btnSplitFile" layoutX="290.0"
+					layoutY="6.0" onAction="#handlerBtnSplitFile"
+					stylesheets="@../css/bootstrap3.css" text="Particionar Arquivo">
+					<styleClass>
+						<String fx:value="action-btn" />
+						<String fx:value="sm" />
+					</styleClass>
+				</JFXButton>
 			</children>
 		</AnchorPane>
 	</children>
