Iniciado a criação da funcionalidade de tratamento dos arquivos.

--- a/src/main/resources/view/FXMLAnchorPaneLeituraArquivo.fxml
+++ b/src/main/resources/view/FXMLAnchorPaneLeituraArquivo.fxml
@@ -15,17 +15,31 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mb.dabm.controller.FXMLAnchorPaneLeituraArquivoController">
+<AnchorPane fx:id="root" maxHeight="-Infinity"
+	maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+	prefHeight="580.0" prefWidth="800.0"
+	xmlns="http://javafx.com/javafx/8.0.171"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="mb.dabm.controller.FXMLAnchorPaneLeituraArquivoController">
 	<children>
-		<JFXButton fx:id="btnSelectFile" buttonType="RAISED" layoutX="11.0" layoutY="8.0" onAction="#btnAbrirClickFile" prefHeight="40.0" prefWidth="135.0" style="-fx-background-insets: 0,0,-1,0;" styleClass="btn_primary" stylesheets="@../css/layout.css" text="Selecionar...">
+		<JFXButton fx:id="btnSelectFile" buttonType="RAISED"
+			layoutX="11.0" layoutY="8.0" onAction="#btnAbrirClickFile"
+			prefHeight="40.0" prefWidth="135.0"
+			style="-fx-background-insets: 0,0,-1,0;" styleClass="btn_primary"
+			stylesheets="@../css/layout.css" text="Selecionar...">
 			<font>
 				<Font size="14.0" />
 			</font>
 			<graphic>
-				<FontAwesomeIconView glyphName="FOLDER_OPEN_ALT" size="20.0" />
+				<FontAwesomeIconView glyphName="FOLDER_OPEN_ALT"
+					size="20.0" />
 			</graphic>
 		</JFXButton>
-		<JFXButton fx:id="btnVrfFile" buttonType="RAISED" layoutX="11.0" layoutY="59.0" onAction="#onProcessarLeitura" prefHeight="40.0" prefWidth="135.0" style="-fx-background-insets: 0,0,-1,0;" styleClass="success" stylesheets="@../css/layout.css" text="Verificar">
+		<JFXButton fx:id="btnVrfFile" buttonType="RAISED"
+			layoutX="11.0" layoutY="59.0" onAction="#onProcessarLeitura"
+			prefHeight="40.0" prefWidth="135.0"
+			style="-fx-background-insets: 0,0,-1,0;" styleClass="success"
+			stylesheets="@../css/layout.css" text="Verificar">
 			<font>
 				<Font size="14.0" />
 			</font>
@@ -33,9 +47,13 @@
 				<FontIcon iconLiteral="fa-file-text-o" iconSize="20" />
 			</graphic>
 		</JFXButton>
-		<JFXTextField fx:id="txtNameFile" disable="true" editable="false" layoutX="165.0" layoutY="11.0" prefHeight="25.0" prefWidth="620.0" />
-		<JFXProgressBar fx:id="progress" layoutX="165.0" layoutY="72.0" prefHeight="15.0" prefWidth="620.0" />
-		<Label fx:id="lblStatus" layoutX="165.0" layoutY="52.0" prefHeight="15.0" prefWidth="620.0" text="Contador:">
+		<JFXTextField fx:id="txtNameFile" disable="true"
+			editable="false" layoutX="165.0" layoutY="11.0" prefHeight="25.0"
+			prefWidth="620.0" />
+		<JFXProgressBar fx:id="progress" layoutX="165.0"
+			layoutY="72.0" prefHeight="15.0" prefWidth="620.0" />
+		<Label fx:id="lblStatus" layoutX="165.0" layoutY="52.0"
+			prefHeight="15.0" prefWidth="620.0" text="Contador:">
 			<padding>
 				<Insets left="5.0" />
 			</padding>
@@ -43,57 +61,80 @@
 				<Font name="System Bold" size="12.0" />
 			</font>
 		</Label>
-		<JFXButton fx:id="btnTask" buttonType="RAISED" layoutX="11.0" layoutY="110.0" prefHeight="40.0" prefWidth="135.0" style="-fx-background-insets: 0,0,-1,0;" styleClass="danger" stylesheets="@../css/layout.css" text="Parar">
+		<JFXButton fx:id="btnTask" buttonType="RAISED"
+			layoutX="11.0" layoutY="110.0" prefHeight="40.0" prefWidth="135.0"
+			style="-fx-background-insets: 0,0,-1,0;" styleClass="danger"
+			stylesheets="@../css/layout.css" text="Parar">
 			<font>
 				<Font size="14.0" />
 			</font>
 			<graphic>
-				<FontAwesomeIconView glyphName="STOP_CIRCLE_ALT" size="20.0" />
+				<FontAwesomeIconView glyphName="STOP_CIRCLE_ALT"
+					size="20.0" />
 			</graphic>
 		</JFXButton>
-		<AnchorPane fx:id="anchorPaneResumo" layoutX="166.0" layoutY="133.0" prefHeight="40.0" prefWidth="620.0">
+		<AnchorPane fx:id="anchorPaneResumo" layoutX="166.0"
+			layoutY="133.0" prefHeight="40.0" prefWidth="620.0">
 			<children>
-				<Label fx:id="lblTotalLinhas" layoutX="6.0" layoutY="11.0" text="Linhas existentes:">
+				<Label fx:id="lblTotalLinhas" layoutX="6.0" layoutY="11.0"
+					text="Linhas existentes:">
 					<font>
 						<Font name="System Bold" size="12.0" />
 					</font>
 				</Label>
-				<JFXTextField fx:id="txtTotalLinhas" editable="false" layoutX="115.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
-				<Label fx:id="lblTempoProc" layoutX="291.0" layoutY="11.0" text="Tempo processamento:">
+				<JFXTextField fx:id="txtTotalLinhas" editable="false"
+					layoutX="115.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
+				<Label fx:id="lblTempoProc" layoutX="291.0" layoutY="11.0"
+					text="Tempo processamento:">
 					<font>
 						<Font name="System Bold" size="12.0" />
 					</font>
 				</Label>
-				<JFXTextField fx:id="txtTempoProc" editable="false" layoutX="433.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
+				<JFXTextField fx:id="txtTempoProc" editable="false"
+					layoutX="433.0" layoutY="2.0" prefHeight="25.0" prefWidth="160.0" />
 			</children>
 		</AnchorPane>
-      <TitledPane fx:id="titledPane" layoutX="8.0" layoutY="185.0" styleClass="primary" stylesheets="@../css/bootstrap3.css" text="Lista de Arquivos">
-         <content>
-      		<AnchorPane fx:id="anchorPaneSplitFile" prefHeight="340.0" prefWidth="784.0">
-      			<children>
-      				<JFXListView fx:id="listaViewFilesSplit" layoutX="18.0" layoutY="45.0" onMouseClicked="#handleClickFile" prefHeight="274.0" prefWidth="746.0" />
-      				<Label fx:id="lblLinhasPorArquivo" layoutX="18.0" layoutY="15.0" text="Total de Linhas por arquivo:" textFill="#030ed7">
-      					<font>
-      						<Font name="System Bold" size="12.0" />
-      					</font>
-      				</Label>
-      				<JFXButton fx:id="btnSplitFile" layoutX="319.0" layoutY="9.0" onAction="#handlerBtnSplitFile" stylesheets="@../css/bootstrap3.css" text="Particionar Arquivo">
-      					<styleClass>
-      						<String fx:value="action-btn" />
-      						<String fx:value="sm" />
-      					</styleClass>
-      				</JFXButton>
-                  <TextField fx:id="txtLinhasPorArquivo" layoutX="184.0" layoutY="9.0" prefWidth="119.0" />
-                  <Separator layoutX="310.0" layoutY="13.0" orientation="VERTICAL" prefHeight="0.0" prefWidth="1.0" />
-      			</children>
-      		</AnchorPane>
-         </content>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </TitledPane>
-		<JFXProgressBar fx:id="progressParte" layoutX="165.0" layoutY="118.0" prefHeight="10.0" prefWidth="620.0" styleClass="custom-jfx-progress-bar" stylesheets="@../css/layout.css" />
-		<Label fx:id="lblStatusParte" layoutX="165.0" layoutY="99.0" prefHeight="15.0" prefWidth="620.0" text="processando...">
+		<TitledPane fx:id="titledPane" layoutX="8.0"
+			layoutY="185.0" styleClass="primary"
+			stylesheets="@../css/bootstrap3.css" text="Lista de Arquivos">
+			<content>
+				<AnchorPane fx:id="anchorPaneSplitFile"
+					prefHeight="340.0" prefWidth="784.0">
+					<children>
+						<JFXListView fx:id="listaViewFilesSplit"
+							layoutX="18.0" layoutY="45.0" onMouseClicked="#handleClickFile"
+							prefHeight="274.0" prefWidth="746.0" />
+						<Label fx:id="lblLinhasPorArquivo" layoutX="18.0"
+							layoutY="15.0" text="Total de Linhas por arquivo:"
+							textFill="#030ed7">
+							<font>
+								<Font name="System Bold" size="12.0" />
+							</font>
+						</Label>
+						<JFXButton fx:id="btnSplitFile" layoutX="319.0"
+							layoutY="9.0" onAction="#handlerBtnSplitFile"
+							stylesheets="@../css/bootstrap3.css" text="Particionar Arquivo">
+							<styleClass>
+								<String fx:value="action-btn" />
+								<String fx:value="sm" />
+							</styleClass>
+						</JFXButton>
+						<TextField fx:id="txtLinhasPorArquivo" layoutX="184.0"
+							layoutY="9.0" prefWidth="119.0" />
+						<Separator layoutX="310.0" layoutY="13.0"
+							orientation="VERTICAL" prefHeight="0.0" prefWidth="1.0" />
+					</children>
+				</AnchorPane>
+			</content>
+			<font>
+				<Font name="System Bold" size="12.0" />
+			</font>
+		</TitledPane>
+		<JFXProgressBar fx:id="progressParte" layoutX="165.0"
+			layoutY="118.0" prefHeight="10.0" prefWidth="620.0"
+			styleClass="custom-jfx-progress-bar" stylesheets="@../css/layout.css" />
+		<Label fx:id="lblStatusParte" layoutX="165.0" layoutY="99.0"
+			prefHeight="15.0" prefWidth="620.0" text="processando...">
 			<padding>
 				<Insets left="5.0" />
 			</padding>
