implementado o sobre do sistema.

--- a/src/main/resources/css/principal.css
+++ b/src/main/resources/css/principal.css
@@ -10,5 +10,11 @@
 .textoLabel{
     -fx-text-fill: #065fb8;
     -fx-text-alignment:center;
-    -fx-font-size: 15px;
+    -fx-font-size: 13px;
+}
+
+.textoLabelSobre{
+    -fx-text-fill: #065fb8;
+    -fx-text-alignment:center;
+    -fx-font-size: 14px;
 }
